--- a/tmux.conf
+++ b/tmux.conf
@@ -1,16 +1,15 @@
-# reset prefix
-set -g prefix C-z
-
 set -g mouse on # use mouse
 
 set -g renumber-windows on # renumber windows after remove
 
-set -g mode-keys vim # in copy mode ,use vim keys
+set -g mode-keys vi # in copy mode ,use vim keys
 
 # ---- tpm manage plug ----
 
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tpm-sensible'
 
 # init tmp 
 
