--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,24 @@
+# tmux prefix
+set -g prefix C-b
+
 set -g mouse on # use mouse
 
 set -g renumber-windows on # renumber windows after remove
 
 set -g mode-keys vi # in copy mode ,use vim keys
 
+# set vim mode pane selection
+bind-key k select-pane -U
+bind-key j select-pane -D
+bind-key h select-pane -L
+bind-key l select-pane -R
+
 # ---- tpm manage plug ----
 
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tpm-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # init tmp 
 
