--- a/tmux.conf
+++ b/tmux.conf
@@ -14,11 +14,13 @@ bind-key h select-pane -L
 bind-key l select-pane -R
 
 # ---- tpm manage plug ----
+# press prefix + I to install
 
 setenv -g TMUX_PLUGIN_MANAGER_PATH '~/.tmux/plugins'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # init tmp 
 
