--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,11 @@
-# tmux prefix
-set -g prefix C-b
+# By yongcong.wang @ 2019/02/21
+# user 'prefix + source-file ~/.tmux.conf' to active
+
+# use powerline status
+source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+
+# ----- global set -----
+set -g prefix C-b # prefix
 
 set -g mouse on # use mouse
 
@@ -13,6 +19,29 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# ----- color set -----
+set -g default-terminal "screen-256color" # 256color set
+
+# make copy mode more like vim
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
+
+# ----- status set -----
+#set -g status-fg white 
+#set -g status-bg black
+
+# status left content and color
+#set -g status-left-length 40
+#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P "
+#set -g status-utf8 on
+
+# status right
+#set -g status-right "#[fg=cyan]%I:%M %p"
+
 # ---- tpm manage plug ----
 # press prefix + I to install
 
@@ -25,3 +54,4 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # init tmp 
 
 run '~/.tmux/plugins/tpm/tpm'
+
