--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 # By yongcong.wang @ 2019/02/21
-# user 'prefix + source-file ~/.tmux.conf' to active
+# user 'prefix + :source-file ~/.tmux.conf' to active
 
 # use powerline status
-source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
+# source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
 
 # ----- global set -----
 set -g prefix C-b # prefix
@@ -19,6 +19,10 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# retain current path
+bind c new-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
 # ----- color set -----
 set -g default-terminal "screen-256color" # 256color set
 
@@ -31,16 +35,25 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
 # ----- status set -----
-#set -g status-fg white 
-#set -g status-bg black
+set -g message-style "bg=#00346e, fg=#ffffd7"        # tomorrow night blue, base3
 
-# status left content and color
-#set -g status-left-length 40
-#set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P "
-#set -g status-utf8 on
+set -g status-style "bg=#00346e, fg=#ffffd7"   # tomorrow night blue, base3
+set -g status-left "#[bg=#0087ff] ❐ #S "       # blue
+set -g status-left-length 400
+set -g status-right "#{?client_prefix, ⌨ , } #[bg=#0087ff] #(whoami)@#h #[bg=red] %Y-%m-%d %H:%M "
+set -g status-right-length 600
 
-# status right
-#set -g status-right "#[fg=cyan]%I:%M %p"
+set -g set-clipboard on
+set -g history-limit 8000
+
+set -wg window-status-format " #I #W "
+set -wg window-status-current-format " #I #W "
+set -wg window-status-separator ""
+set -wg window-status-current-style "bg=red" # red
+set -wg window-status-last-style "fg=red"
+
+set -wg pane-active-border-style "fg=blue"
+set -wg pane-border-style "fg=#585858"       # base01
 
 # ---- tpm manage plug ----
 # press prefix + I to install
@@ -54,4 +67,3 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # init tmp 
 
 run '~/.tmux/plugins/tpm/tpm'
-
