rm keyboard bind

--- a/tmux.conf
+++ b/tmux.conf
@@ -5,19 +5,19 @@
 # source "/usr/local/lib/python2.7/dist-packages/powerline/bindings/tmux/powerline.conf"
 
 # ----- global set -----
-set -g prefix C-b # prefix
+## set -g prefix C-b # prefix
 
 set -g mouse on # use mouse
 
 set -g renumber-windows on # renumber windows after remove
 
-set -g mode-keys vi # in copy mode ,use vim keys
+## set -g mode-keys vi # in copy mode ,use vim keys
 
 # set vim mode pane selection
-bind-key k select-pane -U
-bind-key j select-pane -D
-bind-key h select-pane -L
-bind-key l select-pane -R
+## bind-key k select-pane -U
+## bind-key j select-pane -D
+## bind-key h select-pane -L
+## bind-key l select-pane -R
 
 # retain current path
 bind c new-window -c "#{pane_current_path}"
@@ -27,12 +27,12 @@ bind '"' split-window -c "#{pane_current_path}"
 set -g default-terminal "screen-256color" # 256color set
 
 # make copy mode more like vim
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+## unbind [
+## bind Escape copy-mode
+## unbind p
+## bind p paste-buffer
+## bind -t vi-copy 'v' begin-selection
+## bind -t vi-copy 'y' copy-selection
 
 # ----- status set -----
 set -g message-style "bg=#00346e, fg=#ffffd7"        # tomorrow night blue, base3
